--- a/sections/test2-collection-product-grid.liquid
+++ b/sections/test2-collection-product-grid.liquid
@@ -1,3 +1,4 @@
+{% comment %} ?view=test&sort_by=best-selling&filter.v.price.gte=&filter.v.price.lte=&filter.p.m.ase.color=Amethyst {% endcomment %}
 {%- assign any_filter_active = 0 -%}
 {%- for filter in collection.filters -%}
   {% if filter.active_values.size > 0 %}
@@ -6,7 +7,7 @@
 {%- endfor -%}
 {%- if any_filter_active == 0 -%}
   {% comment %} render product grid {% endcomment %}
-  {%- render 'color-palette', filters: collection.filters -%}
+  {%- render 'ase-color-palette', filters: collection.filters -%}
 {%- else -%}
   {% comment %} render product grid {% endcomment %}
   <p>Product Grid</p>
