--- a/sections/ase-collection-product-grid.liquid
+++ b/sections/ase-collection-product-grid.liquid
@@ -35,7 +35,7 @@
 {%- endfor -%}
 {%- if any_filter_active == 0 -%}
   {% comment %} render product grid {% endcomment %}
-  {%- render 'ase-color-palette', filters: collection.filters -%}
+  {%- render 'ase-color-palette', collection: collection, filters: collection.filters, sort: collection.sort_by -%}
 {%- else -%}
   {% comment %} render product grid {% endcomment %}
 
