--- a/assets/ase-header.css
+++ b/assets/ase-header.css
@@ -1,13 +1,13 @@
 @media screen and (max-width: 989px) {
     .header {
-        grid-template-areas: "left-icons heading ase-icons icons";
-        grid-template-columns: 1fr 4fr 1fr 2fr;
+        grid-template-areas: "left-icons heading icons";
+        grid-template-columns: 1fr 4fr auto;
     }
 }
 @media screen and (min-width: 990px) {
     .header--middle-left {
-        grid-template-areas: 'heading navigation ase-icons icons';
-        grid-template-columns: auto auto 1fr 1fr;
+        grid-template-areas: 'heading navigation icons';
+        grid-template-columns: auto auto auto;
         column-gap: 2rem;
       }
 }
