--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -235,7 +235,6 @@
         </h1>
       {%- endif -%}
     {%- endif -%}
-    {%- render 'icon-whatsup' -%}
     <div class="header__icons{% if section.settings.enable_country_selector or section.settings.enable_language_selector %} header__icons--localization header-localization{% endif %}">
       <div class="desktop-localization-wrapper">
         {%- if section.settings.enable_country_selector and localization.available_countries.size > 1 -%}
@@ -294,10 +293,11 @@
           </localization-form>
         {%- endif -%}
       </div>
+      {%- render 'icon-whatsup' -%}
       {% render 'header-search', input_id: 'Search-In-Modal' %}
 
       {%- if shop.customer_accounts_enabled -%}
-        <a href="{%- if customer -%}{{ routes.account_url }}{%- else -%}{{ routes.account_login_url }}{%- endif -%}" class="header__icon header__icon--account link focus-inset{% if section.settings.menu != blank %} small-hide{% endif %}">
+        <a href="{%- if customer -%}{{ routes.account_url }}{%- else -%}{{ routes.account_login_url }}{%- endif -%}" class="header__icon header__icon--account link focus-inset{% if section.settings.menu != blank %}{% endif %}">
           {% render 'icon-account' %}
           <span class="visually-hidden">
             {%- liquid
