--- a/sections/ase-product.liquid
+++ b/sections/ase-product.liquid
@@ -3,3 +3,10 @@
     <p>Type: {{ warning.type }} text: {{ warning.text }} url: {{ warning.info_url }} order: {{ warning.info_url }}</p>
   {% endfor %}
 {%- endif -%}
+{% schema %}
+{
+  "name": "t:sections.ase-product.name",
+  "tag": "section",
+  "class": "section"
+}
+{% endschema %}
