default color images to viva12

--- a/snippets/ase-color-palette.liquid
+++ b/snippets/ase-color-palette.liquid
@@ -1,6 +1,6 @@
 {{ 'ase-color-palette.css' | asset_url | stylesheet_tag }}
 {% comment %} haldles {% endcomment %}
-{%- assign img_prefix = '' -%}
+{%- assign img_prefix = 'th_viva12' -%}
 {%- assign ext = '.jpg' %}
 {% if collection.handle == 'preciosa-viva12-fb-hf' or collection.handle == 'premium-dmc-fb-hf' -%}
   {%- assign img_prefix = 'th_viva12' -%}
