--- a/snippets/ase-color-palette_column_flow.liquid
+++ b/snippets/ase-color-palette_column_flow.liquid
@@ -1,14 +1,18 @@
 {{ 'ase-color-palette.css' | asset_url | stylesheet_tag }}
 {% comment %} haldles {% endcomment %}
+{%- assign use_swatches = true -%}
 {%- assign img_prefix = 'th_viva12' -%}
 {%- assign ext = '.jpg' %}
 {% if collection.handle == 'preciosa-viva12-fb-hf' or collection.handle == 'premium-dmc-fb-hf' -%}
   {%- assign img_prefix = 'th_viva12' -%}
+  {%- assign use_swatches = false -%}
 {%- elsif collection.handle == 'swarovski-emelents-fb-hf' -%}
   {%- assign img_prefix = 'th_sw' -%}
   {%- assign ext = '.png' -%}
+  {%- assign use_swatches = false -%}
 {%- elsif collection.handle == 'cabochon-fb-hf' -%}
   {%- assign img_prefix = 'th_cabochon' -%}
+  {%- assign use_swatches = false -%}
 {% endif %}
 {% if img_prefix %}
   {%- assign img_prefix = img_prefix | append: '_' -%}
@@ -49,14 +53,18 @@
             <a
               href="{{ filter_value.url_to_add | append: next_sort }}"
             >
-              <div class="ase-color-palette-item">
-                <img
-                  width="30"
-                  height="30"
-                  src="{{ img_prefix | append: filter_value.label | downcase | replace: ' ', '_' | append: ext | file_img_url }}"
-                >
-                <div class="ase-color-palette-item-title">{{- filter_value.label | escape -}}</div>
-              </div>
+              {% if use_swatches %}
+                {% render 'swatch', swatch: filter_value.value %}
+              {% else %}
+                <div class="ase-color-palette-item">
+                  <img
+                    width="30"
+                    height="30"
+                    src="{{ img_prefix | append: filter_value.label | downcase | replace: ' ', '_' | append: ext | file_img_url }}"
+                  >
+                  <div class="ase-color-palette-item-title">{{- filter_value.label | escape -}}</div>
+                </div>
+              {% endif %}
             </a>
           {% endif %}
         {% endfor %}
